# PHY104B

./: .gitignore  README.md  pyproject.toml  template.typ
21-时间测量中随机误差的分布规律/: data.csv  data.py  main.typ
22-单摆的设计与研究实验/: data.py  main.typ
